fix: made constant spacing for all modules + added a Divider component

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -12,7 +12,7 @@
   background-color: transparent;
   text-align: left;
   border-top: solid 1px $color-gray-border;
-  padding-top: 35px;
+  padding-top: 30px;
 }
 .footer__inner {
   display: grid;
