--- a/src/components/Landing/Skills/Skills.module.scss
+++ b/src/components/Landing/Skills/Skills.module.scss
@@ -4,9 +4,8 @@
 
 .container {
   width: 100%;
-  padding-bottom: 5em;
-  margin-bottom: 1em;
-  border-bottom: solid 1px $color-gray-border;
+  padding-bottom: $padding-containers;
+  margin-bottom: $margin-containers;
   text-align: center;
 }
 
